# python_fluent_translator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  translator.py
src/data/: const_values.py  gpt_models.py  language_names.py
src/schemas/: config.py  dictionary.py
src/utils/: cache.py  config.py  gpt.py  parser.py
